--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-theme: jekyll-theme-architect
+# About me
+## _Wang Luting_
+
+
+a student from Hokkaido University doing some research about sharing economy, especially P2P accommodation.
