Set theme jekyll-theme-architect

--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@
 
 
 a student from Hokkaido University doing some research about sharing economy, especially P2P accommodation.
+
+theme: jekyll-theme-architect
