--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,14 @@
+# About me
+## _Wang Luting_
 
 
-theme: jekyll-theme-architect
+a student from Hokkaido University doing some research about sharing economy, especially P2P accommodation.
+
+- Impacts of Airbnb
+- SDGs
+- ✨Hawaii and Japan
+
+## What else
+
+- Loving story 
+- loving music
