Set theme jekyll-theme-architect

--- a/_config.yml
+++ b/_config.yml
@@ -12,3 +12,5 @@ a student from Hokkaido University doing some research about sharing economy, es
 
 - Loving story 
 - loving music
+
+theme: jekyll-theme-architect
